--- a/frontend/src/routes/Home.css
+++ b/frontend/src/routes/Home.css
@@ -2,12 +2,21 @@
     display: flex;
     justify-content: center;
     flex-grow: 1;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+
 }
+
 
 .app-desc {
     display: flex;
     justify-content: center;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+
 }
 .home-wrapper {
     margin-top: 120px;
+}
+
+.recipe-form {
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
 }
